--- a/app/templates/welcome.hbs
+++ b/app/templates/welcome.hbs
@@ -12,7 +12,7 @@
   </div>
   <br>
 
-  <div class="row">
+  {{!-- <div class="row">
     <div class="card-deck">
       {{#each model as |card-info|}}
         <div class="card mb-4 card-info">
@@ -26,7 +26,7 @@
         </div>
       {{/each}}
     </div>
-  </div>
+  </div> --}}
 
   {{user-guide}}
   <br>
